src/css/elements/button.css
.button {
  font-weight: var(--font-medium);
  font-size: var(--text-md);
  color: var(--color-primary-B500);
  line-height: 24px;
  padding: 12px;
  border-radius: 8px;
  border: 1px solid var(--color-primary-B400);
  cursor: pointer;
}

.button:not(.button--disabled):hover {
  background: var(--color-primary-B400);
  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
  color: var(--color-neutrals);
}

.button:not(.button--disabled):focus {
  background: var(--color-primary);
  border-color: var(--color-primary);
  color: var(--color-neutrals);
}

.button.button--disabled {
  cursor: default;
  background: transparent;
  border-color: var(--color-neutrals-N50);
  color: var(--color-neutrals-N5);
}

.button.button--secondary {
  background: var(--color-neutrals);
}

.icon-botton {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  border-radius: 8px;
}

